[package]
name = "input"
description = "libinput bindings for rust"
license = "MIT"
documentation = "https://docs.rs/input"
repository = "https://github.com/Drakulix/input.rs"
version = "0.8.2"
keywords = ["wayland", "input", "bindings"]
categories = ["external-ffi-bindings"]
authors = ["Drakulix (Victoria Brekenfeld)"]
edition = "2018"
exclude = [".gitignore", ".rustfmt.toml", ".github"]

[dependencies]
io-lifetimes = "1.0.3"
libc = "0.2"
bitflags = "1.2"
log = { version = "0.4", optional = true }

[dependencies.input-sys]
version = "1.17.0"
path = "input-sys"
default-features = false

[dependencies.udev]
version = "0.7"
optional = true

[dev-dependencies]
nix = "0.26"

[features]
default = ["udev", "log", "libinput_1_21"]
gen = ["input-sys/gen"]
libinput_1_11 = ["input-sys/libinput_1_11"]
libinput_1_14 = ["input-sys/libinput_1_14", "libinput_1_11"]
libinput_1_15 = ["input-sys/libinput_1_15", "libinput_1_14"]
libinput_1_19 = ["input-sys/libinput_1_19", "libinput_1_15"]
libinput_1_21 = ["input-sys/libinput_1_21", "libinput_1_19"]

[workspace]
members = [
  "input-sys"
]
