[package]
name = "input"
description = "libinput bindings for rust"
license = "MIT"
documentation = "https://docs.rs/input"
repository = "https://github.com/Drakulix/input.rs"
version = "0.9.0"
keywords = ["wayland", "input", "bindings"]
categories = ["external-ffi-bindings"]
authors = ["Drakulix (Victoria Brekenfeld)"]
edition = "2018"
exclude = [".gitignore", ".rustfmt.toml", ".github"]

[dependencies]
io-lifetimes = "1.0.3"
libc = "0.2"
bitflags = "2.4"
log = { version = "0.4.20", optional = true }

[dependencies.input-sys]
version = "1.18.0"
path = "input-sys"
default-features = false

[dependencies.udev]
version = "0.8"
optional = true

[dev-dependencies]
rustix = { version = "0.38", features = ["event"] }

[features]
default = ["udev", "log", "libinput_1_23"]
use_bindgen = ["input-sys/use_bindgen"]
libinput_1_11 = ["input-sys/libinput_1_11"]
libinput_1_14 = ["input-sys/libinput_1_14", "libinput_1_11"]
libinput_1_15 = ["input-sys/libinput_1_15", "libinput_1_14"]
libinput_1_19 = ["input-sys/libinput_1_19", "libinput_1_15"]
libinput_1_21 = ["input-sys/libinput_1_21", "libinput_1_19"]
libinput_1_23 = ["input-sys/libinput_1_23", "libinput_1_21"]

[workspace]
members = [
  "input-sys"
]
