[package]
name = "input-sys"
version = "1.17.0"
authors = ["Victoria Brekenfeld (Drakulix) <github@drakulix.de>"]
build = "build.rs"
description = "Bindgen generated unsafe libinput wrapper"
documentation = "https://drakulix.github.io/input.rs/input-sys"
repository = "https://github.com/Drakulix/input.rs/tree/master/input-sys"
keywords = ["wayland", "input", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies.bindgen]
version = "0.57"
optional = true

[features]
default = ["libinput_1_21"]
use_bindgen = ["bindgen"]
update_bindings = ["use_bindgen"]
libinput_1_11 = []
libinput_1_14 = []
libinput_1_15 = []
libinput_1_19 = []
libinput_1_21 = []
